# DMA_BEFORE_IMX415

./: .gitignore  2026-04-27-205003-fast.txt  2026516.md  2026516.txt  2026518.txt  213.txt  2654.txt  AGENTS.md  CLAUDE.md  CMakeLists.txt  SafeQueue.h  cpu_core_load.txt  dmabuf.c  dmabuf.h  h264_distributor.c  h264_distributor.h  main.cpp  mpp.c  mpp.h  mpp_decoder.cpp  mpp_decoder.h  output.avi  poll.txt  post_process.cpp  post_process.h  rtmp.c  rtmp.h  streamer.c  streamer.h  thread_pool.cpp  thread_pool.h  v4l2_common.h  xiugai.txt  yolov5s.cpp  yolov5s.h  串口.txt  串口双缓冲伪代码.md  初始化推理后处理.txt  初始化推理后处理解答xx.md  单帧测试.txt  (+6 more)
视频流媒体/项目/sclient/: CMakeLists.txt  README.md
视频流媒体/项目/sclient/docs/: README_INDEX.md  src_architecture_overview.md
视频流媒体/项目/sclient/scripts/: README.md  dma_rtp.sh  dma_tcp.sh  dma_udp.sh  rtp.sh  tcp.sh  udp.sh  udp_profile.sh
视频流媒体/项目/sclient/src/adapters/: README.md
视频流媒体/项目/sclient/src/app/: README.md  main.cpp
视频流媒体/项目/sclient/src/app/cli/: CliOptions.cpp  CliOptions.h  README.md
视频流媒体/项目/sclient/src/common/: README.md
视频流媒体/项目/sclient/src/common/concurrency/: BoundedQueue.h  README.md
视频流媒体/项目/sclient/src/common/log/: Logger.cpp  Logger.h  README.md
视频流媒体/项目/sclient/src/common/media/: DecodedFrame.h  README.md
视频流媒体/项目/sclient/src/common/metrics/: LatencyStats.h  README.md
视频流媒体/项目/sclient/src/common/net/: H264AnnexB.h  README.md  RtpProtocol.h  SdpSessionDescription.cpp  SdpSessionDescription.h
视频流媒体/项目/sclient/src/common/protocol/: Protocol.h  README.md
视频流媒体/项目/sclient/src/modules/: README.md
视频流媒体/项目/sclient/src/modules/decoding/: README.md  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderBackend.h
视频流媒体/项目/sclient/src/modules/decoding/software/: README.md  SoftwareVideoDecoderBackend.cpp
视频流媒体/项目/sclient/src/modules/network/: AdaptiveJitterBuffer.h  README.md  StreamClient.cpp  StreamClient.h  StreamClientInternal.h  StreamClientRtp.cpp  StreamClientTcp.cpp  StreamClientUdp.cpp
视频流媒体/项目/sclient/src/modules/network/types/: ClientConfig.h  README.md  ReceivedFrame.h  UdpReceiveStats.h
视频流媒体/项目/sclient/src/modules/rendering/: README.md  VideoRenderer.cpp  VideoRenderer.h  VideoRendererBackend.h
视频流媒体/项目/sclient/src/modules/rendering/opengl/: ImGuiOpenGL3Backend.cpp  OpenGlVideoRendererBackend.cpp  OpenGlVideoRendererBackend.h  OpenGlVideoRendererHud.cpp  OpenGlVideoRendererHud.h  README.md
视频流媒体/项目/sclient/tests/: README.md
视频流媒体/项目/sclient/tests/benchmark/: README.md  UdpJitterBenchmark.cpp
视频流媒体/项目/sclient/tests/integration/: README.md  RtpReceiveIntegrationTest.cpp  TcpReceiveIntegrationTest.cpp  UdpReceiveIntegrationTest.cpp
视频流媒体/项目/sclient/tests/smoke/: README.md  RtpDecodeSmoke.cpp
视频流媒体/项目/sclient/tests/support/: H264Samples.h  MonotonicClock.h  README.md  SocketHelpers.h  TestAssertions.h
视频流媒体/项目/sclient/tests/unit/: BoundedQueueTest.cpp  CliOptionsTest.cpp  LatencyStatsTest.cpp  README.md  RtpProtocolTest.cpp  SdpSessionDescriptionTest.cpp
视频流媒体/项目/sserver/: CMakeLists.txt  README.md  benchmark_rtp_null.sdp  rtp_null_test.sdp  rtp_v4l2_test.sdp
视频流媒体/项目/sserver/config/: README.md  benchmark.conf  benchmark_invalid_rtp_no_extension.conf  benchmark_invalid_udp_no_metadata.conf  benchmark_null_rtp.conf  benchmark_null_tcp.conf  benchmark_null_tcp_drop_oldest.conf  benchmark_null_tcp_drop_oldest_non_key.conf  benchmark_null_udp.conf  benchmark_null_udp_fast.conf  benchmark_rtp_null.conf  benchmark_rtp_v4l2.conf  benchmark_udp.conf  default.conf  integration_rtp_null.conf  integration_rtp_v4l2.conf  integration_tcp.conf  integration_udp.conf  integration_udp_fec.conf  integration_udp_fec_nack.conf  null_tcp.conf  null_udp.conf  sclient_tcp.conf  sclient_udp.conf  sclient_udp_adaptive.conf  sclient_udp_resilient.conf  smoke.conf  smoke_udp.conf
视频流媒体/项目/sserver/docs/: README_INDEX.md  src_architecture_overview.md  start.md
视频流媒体/项目/sserver/scripts/: README.md  rtp.sh  tcp.sh  test.sh  udp.sh
视频流媒体/项目/sserver/src/app/: AppBootstrap.cpp  AppBootstrap.h  README.md  main.cpp
视频流媒体/项目/sserver/src/common/: README.md
视频流媒体/项目/sserver/src/common/concurrency/: README.md  ThreadSafeQueue.h
视频流媒体/项目/sserver/src/common/log/: Logger.cpp  Logger.h  README.md
视频流媒体/项目/sserver/src/common/metrics/: LatencyRecorder.cpp  LatencyRecorder.h  README.md
视频流媒体/项目/sserver/src/common/model/: EncodedFrame.h  README.md
视频流媒体/项目/sserver/src/common/net/: H264AnnexB.h  README.md  RtpProtocol.h  StreamProtocol.h
视频流媒体/项目/sserver/src/common/time/: MonotonicClock.h  README.md
视频流媒体/项目/sserver/src/config/: AppConfig.cpp  AppConfig.h  README.md
视频流媒体/项目/sserver/src/core/: Application.cpp  Application.h  ApplicationContext.h  IModule.h  ModuleState.h  README.md
视频流媒体/项目/sserver/src/modules/capture/: README.md
视频流媒体/项目/sserver/src/modules/capture/video/: Capture.cpp  Capture.h  CaptureModule.cpp  CaptureModule.h  ICaptureDevice.h
视频流媒体/项目/sserver/src/modules/encoding/: README.md
视频流媒体/项目/sserver/src/modules/encoding/video/: VideoEncoder.cpp  VideoEncoder.h  VideoEncoderBackend.h
视频流媒体/项目/sserver/src/modules/transport/: ITransportBackend.h  README.md  Transport.cpp  Transport.h  TransportModule.cpp  TransportModule.h
视频流媒体/项目/sserver/src/modules/transport/rtp/: RtpPacketizer.cpp  RtpPacketizer.h  RtpStreamingBackend.cpp  RtpStreamingBackend.h
视频流媒体/项目/sserver/src/modules/transport/tcp/: TcpClientSession.cpp  TcpClientSession.h  (+2 more)
视频流媒体/项目/sserver/tests/: README.md
视频流媒体/项目/sserver/tests/benchmark/: README.md  TransportBenchmark.cpp
视频流媒体/项目/sserver/tests/integration/: README.md  RtpIntegrationTest.cpp  TransportIntegrationTest.cpp
视频流媒体/项目/sserver/tests/latency/: DecodeDisplayProbe.cpp  DecodeDisplayProbe.h  LatencyBenchmark.cpp  README.md
视频流媒体/项目/sserver/tests/smoke/: README.md  SmokeTest.cpp
视频流媒体/项目/sserver/tests/support/: README.md  TransportTestClient.h
视频流媒体/项目/sserver/tests/unit/: ApplicationLifecycleTest.cpp  ConfigLoaderNegativeTest.cpp  LatencyRecorderTest.cpp  README.md  RtpConfigTest.cpp  RtpProtocolTest.cpp  UdpConfigTest.cpp  UdpFecRecoveryTest.cpp  UdpProfileConfigTest.cpp
(+68 files in other folders)
